Revised main.css, main.js, index.html.

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
     <button type="button" class="toggle btn btn-secondary btn-lg btn-block">Provider 8</button>
     
     <div class="info card-body">Provider 8 Info<br>
-    Here is some information about provider eight. This information includes provider six's mission, services offered and things
+    Here is some information about provider eight. This information includes provider eight's mission, services offered and things
     of this nature. It will be just a few sentences long. Maybe four or five sentences total.<br>
     <button class="contact"><i class="fa fa-address-card" aria-hidden="true"></i></button>  
     
