Revised main.css and index.html.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Courgette|Kalam:700" rel="stylesheet">
 
   <link rel="stylesheet" href="css/main.css">
  
@@ -29,7 +30,7 @@
   <div class="jumbotron">
    <h3>Welcome to the</h3>
    <h1>Workforce-Training-Provider Network</h1>
-   <i><h4>...serving the greater Puget Sound</h4></i>
+   <h4>...serving the greater Puget Sound</h4>
   </div>
 
   <div class="row">
@@ -225,7 +226,7 @@
 </div>
 
 
-<div class="footer">credits etc go here - created with bootstrap 4 and fontawesome</div>
+<div class="footer">credits etc go here - created with bootstrap 4, fontawesome, and google fonts</div>
 
 </body>
   
