Revised index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="utf-8">
 
-  <title>WATS 3020: Final Project</title>
+  <title>WATS 3020: Final Project JavaScript</title>
 
   <meta name="description" content="WATS 3020 Final Project">
   <meta name="author" content="Katie Grothe">
